feat: add missing docs and fix config typo
